# ncrawler

./: .gitignore  Cargo.toml  Makefile  REPORT.md  REPORTS-UPDATE.md  SCOPE.md  USAGE.md
.codeless/jobs/ncrawler-report-grafana/: REVIEW-stage2.md  REVIEW-stage6.md  SCOPE.md  WORKFLOW.md  template.yaml
.codeless/jobs/ncrawler-v1/: SCOPE.md  WORKFLOW.md  template.yaml
crates/builders/ncrawler-report-ai/: Cargo.toml
crates/builders/ncrawler-report-ai/src/: lib.rs  pipeline.rs  skills.rs
crates/builders/ncrawler-report-ai/tests/: pipeline.rs
crates/builders/ncrawler-report-grafana/: Cargo.toml
crates/builders/ncrawler-report-grafana/src/: audit.rs  lib.rs  model.rs  render.rs  sql.rs
crates/builders/ncrawler-report-grafana/tests/: audit.rs  golden.rs
crates/builders/ncrawler-report-grafana/tests/fixtures/full_data/: expected.md  instance.json  rubix-dash.json  sql-dash.json
crates/builders/ncrawler-report-grafana/tests/fixtures/full_multi/: expected.md  nav.json
crates/builders/ncrawler-report-grafana/tests/fixtures/overview_single/: expected.md  instance.json  site-a.json
crates/builders/ncrawler-report-md/: Cargo.toml
crates/builders/ncrawler-report-md/src/: lib.rs
crates/builders/ncrawler-report-md/tests/: golden.rs
crates/builders/ncrawler-report-md/tests/fixtures/: grafana-multi-panel.artifact.json  grafana-multi-panel.report.md
crates/builders/ncrawler-vector/: Cargo.toml
crates/builders/ncrawler-vector/src/: api.rs  chunk.rs  embed.rs  error.rs  factory.rs  lib.rs  pipeline.rs  uri.rs
crates/builders/ncrawler-vector/src/store/: lance.rs  memory.rs  mod.rs  qdrant.rs
crates/builders/ncrawler-vector/tests/: lance_live.rs
crates/ncrawler-cli/: Cargo.toml
crates/ncrawler-cli/src/: cli.rs  main.rs
crates/ncrawler-core/: Cargo.toml
crates/ncrawler-core/src/: error.rs  lib.rs  sidecar.rs  since.rs  store.rs  tests.rs
crates/ncrawler-core/tests/fixtures/: instance.golden.json
crates/ncrawler-redact/: Cargo.toml
crates/ncrawler-redact/src/: lib.rs
crates/ncrawler-spi/: Cargo.toml
crates/ncrawler-spi/src/: artifact.rs  error.rs  lib.rs  traits.rs
crates/scrapers/ncrawler-grafana/: Cargo.toml
crates/scrapers/ncrawler-grafana/src/: api.rs  audit.rs  chrome.rs  client.rs  data.rs  instance.rs  interp.rs  lib.rs  merge.rs  multi.rs  resolve.rs  selector.rs  stage.rs  status.rs  visual.rs
crates/scrapers/ncrawler-grafana/tests/: api_tests.rs  instance_tests.rs  live.rs  multi_tests.rs  visual_tests.rs
crates/scrapers/ncrawler-grafana/tests/fixtures/: merge_golden.json
crates/scrapers/ncrawler-spider/: Cargo.toml
crates/scrapers/ncrawler-spider/src/: chrome.rs  lib.rs  page.rs
crates/scrapers/ncrawler-spider/tests/: live.rs
runs/01KSRZ1CNS8HGTV3TPPSSQRRYD/01KSRZ47T06TMWWZ6A3VNB9KRQ/: handover.md
runs/01KSRZ1CNS8HGTV3TPPSSQRRYD/01KSRZFJFGXK6G3ZYQ5JS71X4Q/: handover.md
runs/01KSRZ1CNS8HGTV3TPPSSQRRYD/01KSS021JSFNHDAPGH7234FJHA/: handover.md
runs/01KSRZ1CNS8HGTV3TPPSSQRRYD/01KSS0QS07P4X4KSR65TSMWQ9G/: handover.md
runs/01KSRZ1CNS8HGTV3TPPSSQRRYD/01KSS0VQY7NMBT87ZQ3VBWAJHN/: handover.md
runs/01KSRZ1CNS8HGTV3TPPSSQRRYD/01KSS1XSJVW55QMWSCAAMVJBR9/: handover.md
runs/01KSSB824PTKRTK3C2SKDJWCP7/01KSSBB5RBA8K7CXKMRHYKQ0EG/: handover.md
runs/01KSSB824PTKRTK3C2SKDJWCP7/01KSSC4S1KQNSE5W7WQVG5NHM7/: handover.md
runs/01KSSB824PTKRTK3C2SKDJWCP7/01KSSCC20BM4NREHMNWQEPVBGZ/: handover.md
runs/01KSSB824PTKRTK3C2SKDJWCP7/01KSSCSG7JZEWN9H5PZZZDX94Y/: handover.md
runs/01KSSB824PTKRTK3C2SKDJWCP7/01KSSDEMPJX0QNKMRBZKV3HZAK/: handover.md
runs/01KSSB824PTKRTK3C2SKDJWCP7/01KSSE54PQKRR366JG1G7JWQEV/: handover.md
runs/01KSSB824PTKRTK3C2SKDJWCP7/01KSSEA9NBFKSNAA3MB9B47ED1/: handover.md
runs/01KSSB824PTKRTK3C2SKDJWCP7/01KSSFBA0MDQG5DPD2B4JW5Q8T/: handover.md
skills/grafana-triage/: SKILL.md  thresholds.md
