[package]
name        = "ncrawler-cli"
description = "ncrawler — command-line shell: scrape / build / ls / show."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[[bin]]
name = "ncrawler"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ncrawler-spi  = { workspace = true }
ncrawler-core = { workspace = true }
clap          = { workspace = true }
anyhow        = { workspace = true }
chrono        = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
# Pinned to the sibling `starter` workspace; the scrape phase grows an
# HTTP path in later milestones (SCOPE: dependency policy / cargo tree
# single-version requirement).
reqwest       = { workspace = true }
