[package]
name        = "ncrawler-cli"
description = "ncrawler — command-line shell: scrape / build / ls / show."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[[bin]]
name = "ncrawler"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ncrawler-spi       = { workspace = true }
ncrawler-core      = { workspace = true }
ncrawler-report-md = { workspace = true }
ncrawler-report-ai = { path = "../builders/ncrawler-report-ai", version = "0.1.0" }
ncrawler-grafana   = { path = "../scrapers/ncrawler-grafana", version = "0.1.0" }
ncrawler-spider    = { path = "../scrapers/ncrawler-spider", version = "0.1.0" }
# `TokenCancel` bridges a Ctrl-C signal into the `starter_spi::ai::Cancel`
# the builders propagate (SCOPE: cancellation).
starter-ai    = { workspace = true, features = ["provider-claude"] }
clap          = { workspace = true }
serde_json    = { workspace = true }
anyhow        = { workspace = true }
chrono        = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
# Pinned to the sibling `starter` workspace; the scrape phase grows an
# HTTP path in later milestones (SCOPE: dependency policy / cargo tree
# single-version requirement).
reqwest       = { workspace = true }
