[package]
name        = "ncrawler-core"
description = "ncrawler — on-disk artifact store, dirname index, latest-symlink rewrite."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ncrawler-spi = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
tempfile = "3"
