[package]
name        = "ncrawler-redact"
description = "ncrawler — shared, default-on secret redaction pass for report builders."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
regex = { workspace = true }

[dev-dependencies]
quickcheck        = { workspace = true }
quickcheck_macros = { workspace = true }
