[package]
name        = "ncrawler-report-ai"
description = "ncrawler — AI report builder (starter-ai + starter-skills)."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ncrawler-spi       = { workspace = true }
ncrawler-report-md = { workspace = true }

# Cross-cutting concerns from the sibling `starter` workspace. Only the
# `provider-claude` feature is enabled (SCOPE: v1 enables only Claude).
starter-spi      = { workspace = true }
starter-ai       = { workspace = true, features = ["provider-claude"] }
starter-skills   = { workspace = true }
starter-flow-spi = { workspace = true }

serde       = { workspace = true }
serde_json  = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }

[dev-dependencies]
tempfile = "3"
chrono   = { workspace = true }
