[package]
name        = "ncrawler-report-grafana"
description = "ncrawler — deterministic offline Grafana instance report builder."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ncrawler-spi    = { workspace = true }
ncrawler-core   = { workspace = true }
ncrawler-redact = { workspace = true }
starter-spi     = { workspace = true }

serde_json  = { workspace = true }
blake3      = { workspace = true }
async-trait = { workspace = true }
chrono      = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
