[package]
name        = "ncrawler-report-md"
description = "ncrawler — deterministic Markdown report builder."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ncrawler-spi = { workspace = true }
starter-spi  = { workspace = true }

serde_json  = { workspace = true }
async-trait = { workspace = true }
chrono      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
