[package]
name        = "ncrawler-vector"
description = "ncrawler — chunk + embed vector builder. Placeholder."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
