[package]
name        = "ncrawler-grafana"
description = "ncrawler — Grafana scraper (API + renderer-plugin visuals). Placeholder."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
