[package]
name        = "ncrawler-spider"
description = "ncrawler — HTTP spider scraper for arbitrary pages. Placeholder."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
